<resources>
    <string name="app_name">Purrmodoro</string>
    <string name="start_focus">Start Focus Session</string>
    <string name="take_short_break">Take Short Break</string>
    <string name="take_long_break">Take Long Break</string>
    <string name="view_progress">View Progress</string>
    <string name="paused">Paused</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="back_to_home">Back to Home</string>
    <string name="focus_session">Focus Session</string>
    <string name="short_break">Short Break</string>
    <string name="long_break">Long Break</string>
    <string name="sessions_completed">Sessions Completed</string>
    <string name="paw_prints">Paw Prints</string>
    <string name="time_format">%02d:%02d</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="by_romelio_teodoro_n3_3bsit">by: Romelio Teodoro \n3.3BSIT</string>
    <string name="cat_studying">Cat studying</string>
    <string name="cat_focusing_gif">Cat focusing gif</string>
    <string name="the_cat_is_studying_with_you">The cat is studying with you.</string>
    <string name="_25_00">25:00</string>
    <string name="_05_00">05:00</string>
    <string name="cat_relaxing_gif">Cat relaxing gif</string>
    <string name="time_to_stretch_with_the_cat">Time to stretch with the cat!</string>
    <string name="cat_studying_gif">Cat studying gif</string>
    <string name="_0">0</string>
    <string name="session_complete_title">Session Complete!</string>
    <string name="session_complete_message">Your focus session has finished. The cat is proud of you!</string>
    <string name="ok_got_it">OK, got it!</string>
    <string name="_15_00">15:00</string>
    <string name="playing_cat">Playing cat</string>
    <string name="enjoy_a_longer_playful_break">Enjoy a longer, playful break!</string>
</resources>