<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warm_white"
    android:padding="24dp"
    tools:context=".TimerActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/focus_session"
        android:textSize="28sp"
        android:textColor="@color/dark_brown"
        android:textStyle="bold"
        android:fontFamily="@font/patrick_hand"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <ImageView
        android:id="@+id/catImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/cat_focusing_gif"
        android:src="@drawable/focus_cat"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25_00"
        android:textSize="64sp"
        android:textColor="@color/dark_brown"
        android:textStyle="bold"
        android:fontFamily="@font/patrick_hand"
        app:layout_constraintTop_toBottomOf="@id/catImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_cat_is_studying_with_you"
        android:textSize="16sp"
        android:textColor="@color/dark_brown"
        android:fontFamily="@font/patrick_hand"
        app:layout_constraintTop_toBottomOf="@id/timerText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/statusText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="22sp"
            android:fontFamily="@font/patrick_hand"
            android:backgroundTint="@color/mint"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/btnPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:textSize="22sp"
            android:fontFamily="@font/patrick_hand"
            android:backgroundTint="@color/deep_slate"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:textSize="22sp"
            android:fontFamily="@font/patrick_hand"
            android:backgroundTint="@color/deep_pink"
            android:paddingStart="24dp"
            android:paddingEnd="24dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBackToHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="90dp"
        android:padding="4dp"
        android:backgroundTint="@color/beige"
        android:fontFamily="@font/patrick_hand"
        android:text="@string/back_to_home"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>

