<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warm_white"
    android:padding="24dp"
    tools:context=".ProgressActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_progress"
        android:textSize="32sp"
        android:textColor="@color/dark_brown"
        android:textStyle="bold"
        android:fontFamily="@font/patrick_hand"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <ImageView
        android:id="@+id/progressCatImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/cat_studying_gif"
        android:src="@drawable/cat_progress"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/sessionsCompletedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sessions_completed"
        android:textSize="20sp"
        android:textColor="@color/dark_brown"
        android:textStyle="bold"
        android:fontFamily="@font/patrick_hand"
        app:layout_constraintTop_toBottomOf="@id/progressCatImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/sessionsCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="48sp"
        android:fontFamily="@font/patrick_hand"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/sessionsCompletedLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/pawPrintsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paw_prints"
        android:textSize="20sp"
        android:textColor="@color/dark_brown"
        android:textStyle="bold"
        android:fontFamily="@font/patrick_hand"
        app:layout_constraintTop_toBottomOf="@id/sessionsCountText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/btnBackToHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/mint"
        android:fontFamily="@font/patrick_hand"
        android:text="@string/back_to_home"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

