<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warm_white"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/patrick_hand"
        android:text="@string/app_name"
        android:textColor="@color/dark_brown"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/patrick_hand"
        android:text="@string/by_romelio_teodoro_n3_3bsit"
        android:textColor="@color/dark_brown"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/homeCatImage"
        android:layout_width="176dp"
        android:layout_height="178dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/cat_studying"
        android:src="@drawable/cat_studying"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <Button
        android:id="@+id/btnStartFocus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/deep_pink"
        android:padding="16dp"
        android:text="@string/start_focus"
        android:textSize="18sp"
        android:fontFamily="@font/patrick_hand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeCatImage" />

    <Button
        android:id="@+id/btnShortBreak"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/take_short_break"
        android:textSize="18sp"
        android:fontFamily="@font/patrick_hand"
        android:backgroundTint="@color/mint"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/btnStartFocus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnLongBreak"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/take_long_break"
        android:textSize="18sp"
        android:fontFamily="@font/patrick_hand"
        android:backgroundTint="@color/beige"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/btnShortBreak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnViewProgress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_progress"
        android:textSize="18sp"
        android:fontFamily="@font/patrick_hand"
        android:backgroundTint="@color/deep_slate"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/btnLongBreak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
